@@ -3,7 +3,7 @@
 
 ### BEGIN INIT INFO
 # Provides:            modules
-# Required-Start:      mountkernfs sysctl
+# Required-Start:      mountvirts sysctl
 # Should-Start:
 # Required-Stop:
 # Should-Stop:
