@@ -1,16 +1,16 @@
 #!/bin/sh
-# Begin /etc/init.d/mountkernfs
+# Begin /etc/init.d/mountvirtfs
 
 ### BEGIN INIT INFO
-# Provides:            mountkernfs
+# Provides:            mountvirtfs
 # Required-Start:
 # Should-Start:
 # Required-Stop:
 # Should-Stop:
 # Default-Start:       S
 # Default-Stop:
-# Short-Description:   Mounts /sys and /proc virtual (kernel) filesystems.
-# Description:         Mounts /sys and /proc virtual (kernel) filesystems.
+# Short-Description:   Mounts /sys, /proc, and /run virtual (virtel) filesystems.
+# Description:         Mounts /sys, /proc, and run  virtual (virtel) filesystems.
 # X-LFS-Provided-By:   LFS
 ### END INIT INFO
 
@@ -18,7 +18,7 @@
 
 case "${1}" in
     start)
-        message="Mounting kernel-based file systems:"
+        message="Mounting virtel-based file systems:"
 
         if ! mountpoint /proc > /dev/null; then
             message="${message}${INFO} /proc${NORMAL}"
@@ -28,6 +28,11 @@ case "${1}" in
         if ! mountpoint /sys > /dev/null; then
             message="${message}${INFO} /sys${NORMAL}"
             mount -n /sys || failed=1
+        fi
+
+        if ! mountpoint /run > /dev/null; then
+            message="${message}${INFO} /run${NORMAL}"
+            mount -n /run || failed=1
         fi
 
         (exit ${failed})
@@ -40,4 +45,4 @@ case "${1}" in
         ;;
 esac
 
-# End /etc/init.d/mountkernfs
+# End /etc/init.d/mountvirtfs
