@@ -29,6 +29,7 @@ case "${1}" in
 		mount -f / || failed=1
 		mount -f /proc || failed=1
 		mount -f /sys || failed=1
+		mount -f /run || failed=1
 		(exit ${failed})
 		evaluate_retval
 
@@ -36,6 +37,11 @@ case "${1}" in
 		# their option list.  _netdev denotes a network filesystem.
 		boot_mesg "Mounting remaining file systems..."
 		mount -a -O no_netdev >/dev/null
+		evaluate_retval
+
+		#Create a symlink for shared memory after /dev is mounted
+		boot_mesg "Redirect /dev/shm to /run/shm..."
+		ln -s /run/shm /dev/shm
 		evaluate_retval
 		;;
 
