@@ -40,6 +40,11 @@
       <para>2011-04-18</para>
       <itemizedlist>
         <listitem>
+          <para>[bdubbs] - Add new /run mount point to top
+          level directories.  Mount a tmpfs on /run in
+          bootscripts.</para>
+        </listitem>
+        <listitem>
           <para>[bdubbs] - In Chapter 6, move File to before
           binutils to prevent some configure warnings.</para>
         </listitem>
